--- a/admin/css/simple-online-systems-admin.css
+++ b/admin/css/simple-online-systems-admin.css
@@ -10,3 +10,45 @@
 .wrapper-filter {
     padding: 2%;
 }
+
+
+/*searck*/
+#search_pages{
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    width: 200px;
+    padding: 5px;
+    box-shadow: 0 0 5px rgba(0,191,255,0.5);
+    color: #0073aa;
+    font-size: 14px;
+}
+
+#result{
+    display: none;
+    margin-top: 20px;
+    box-shadow: 0 3px 5px rgba(0,191,255,0.5);
+    border-radius: 8px;
+    width: 300px;
+    height: auto;
+    padding: 10px;
+    position: absolute;
+    background: #fff;
+    z-index: 9;
+}
+#result_search > *{
+    font-size: 18px;
+}
+
+.popup-close {
+    font-size: 35px;
+    position: absolute;
+    top: -40px;
+    right: 20px;
+    color: rgb(0,191,255);
+    cursor: pointer;
+}
+
+.popup-close:hover {
+    color: #0073aa;
+}
