--- a/admin/css/simple-online-systems-admin.css
+++ b/admin/css/simple-online-systems-admin.css
@@ -341,3 +341,15 @@
     cursor: pointer;
 }
 
+.sos-registration{
+    width: 100%;
+    height: 500px;
+    border: 1px solid #000;
+}
+
+.sos-video-tutorial{
+    width: 100%;
+    height: 200px;
+    border: 1px solid #000;
+}
+
