--- a/admin/css/simple-online-systems-admin.css
+++ b/admin/css/simple-online-systems-admin.css
@@ -225,6 +225,7 @@
 .sos-wrap .sos-content{
     margin: 0;
     background-color: #fff !important;
+    width: 100%;
 }
 
 .wrap-tabs{
@@ -354,3 +355,99 @@
     border: 1px solid #000;
 }
 
+.sos-wrap #premium_key{
+    width: 100%;
+}
+.sos-wrap #settings_plugins{
+    display: none;
+}
+.sos-wrap #settings_premium{
+    display: none;
+}
+.sos-wrap #settings_debug{
+    display: none;
+}
+.sos-wrap #show_settings_general{
+    font-weight: 600;
+}
+.sos-wrap .active-plugin{
+    font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*toggle*/
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
