--- a/admin/css/plugin-optimizer-admin.css
+++ b/admin/css/plugin-optimizer-admin.css
@@ -338,8 +338,20 @@
 
 .sos-registration{
     width: 100%;
-    height: 500px;
-    border: 1px solid #000;
+    height: auto;
+}
+
+.sos-registration form>*{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5px;
+}
+.sos-registration input{
+    width: 100%;
+}
+
+.sos-registration p{
+    text-align: left;
 }
 
 .sos-video-tutorial{
@@ -717,4 +729,8 @@ select[name="block_plugins"], select[name="block_group_plugins"], select[name="p
     padding: 5px;
     margin-top: -10px !important;
     display: none;
+}
+
+#set_type{
+    width: 100%;
 }
