Valid links check.

--- a/admin/css/plugin-optimizer-admin.css
+++ b/admin/css/plugin-optimizer-admin.css
@@ -797,7 +797,8 @@ select[name="block_plugins"], select[name="block_group_plugins"], select[name="p
 .groups-names{
     font-size: 12px;
     float: right;
-    margin-right: 10px
+    margin-right: 10px;
+    font-weight: 800;
 }
 
 .groups-names > *{
