--- a/admin/css/plugin-optimizer-admin.css
+++ b/admin/css/plugin-optimizer-admin.css
@@ -1,3 +1,7 @@
+.plugin-wrapper > .content > span.close{
+    display: none;
+}
+
 .created-filters {
     /*margin-left: 5%;*/
     display: inline-block;
@@ -347,8 +351,12 @@
     text-align: center;
 }
 
-.sos-wrap .content-filter .plugin-wrapper .block, .select-filter .block{
+.select-filter .block{
     background-color: #ffc4c4;
+}
+.sos-wrap .content-filter .plugin-wrapper .block{
+    background-color: #ffc4c4;
+    color: #212529;
 }
 
 .inside .sos-wrap .hidden_info{
