--- a/admin/css/plugin-optimizer-admin.css
+++ b/admin/css/plugin-optimizer-admin.css
@@ -286,6 +286,8 @@
 
 .sos-wrap .content-filter .content{
     padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     /* Style for "Validated" */
     background-color: #ffffff;
     text-align: left;
